# reward-hacking-pub

./: .env.example  .gitignore  README.md  analyze_eval_run.py  convert_dataset.py  evaluate_with_api.py  example_fine_tuning.py  grader.py  main.py  make_impossible.py  prepare_rft_dataset.py  pyproject.toml  test.jsonl
rft_dataset/: test.jsonl  train.jsonl
rft_dataset_with_grader/: test.jsonl  train.jsonl
